syntax = "proto3";

package events;

// import datetime google
import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
}

message LatLng {
    float latitude = 1;
    float longitude = 2;
}

message Event {
    string id = 1;
    string title = 2;
    string description = 3;
    // date time
    google.protobuf.Timestamp date = 4;
    // udration in hours
    int32 duration = 5;
    User creator = 6;
    string location = 7;
    LatLng latlng = 8;
}